쿠폰 발급 이벤트 종료 / 솔드아웃 페이지 응찰 히스토리 추가

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -300,10 +300,9 @@
 									<img src="resources/img/de/mo/icon-1.jpg" /><span>공유하기</span>
 								</button>
 								  -->
-								<button type="button" class="ba-btn3" id="btn_history"
-									data-toggle="modal" data-target="#bidHistory">
-									<img src="resources/img/de/mo/icon-2.jpg" /><span>응찰
-										히스토리</span>
+								<button type="button" class="ba-btn3" id="btn_history" data-toggle="modal" data-target="#bidHistory">
+									<img src="resources/img/de/mo/icon-2.jpg" />
+									<span>응찰히스토리</span>
 								</button>
 								<button type="button" class="ba-btn3"
 									onclick="javascript:history.back();">
