작가 상세 URL 통합검색 오류 수정

--- a/src/main/resources/templates/thymeleaf/result_artist.html
+++ b/src/main/resources/templates/thymeleaf/result_artist.html
@@ -162,13 +162,14 @@ $(function() {
 
 $(document).on("click", ".artstInfo", function(){ 
 	var artstSq= $(this).attr("id");
-    pageGoPost({
+	location.href = '/artistDetail?artstSq='+artstSq;
+    /* pageGoPost({
 		url:"/artistDetail",
 		target:"_self",
 		vals:[
 			["artstSq", parseInt(artstSq)]
 		]
-	});
+	}); */
 });
 
 /*
