about 모바일 안드로이드 하단바 수정

--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -6447,3 +6447,7 @@ p.dib{display:inline-block !important;}
 .logo_mo {
 	display: block;
 }
+
+/*0829*/
+.box_con1 {height:750px; overflow:auto;}
+.max-img {max-width:75rem;}
