Deal 판매수수료

--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -156,6 +156,7 @@
 						
 						<div class="med">
 							<h2 id="bidOrSale">경매 시작가</h2>
+							판매수수료 <img src="resources/img/ba/me-icon.png" class="med-me" />
 							<div class="med-box radio-2">
 								<div id="bidOrSale2">
 									<input type="radio" id="t1" name="cc" checked>
