--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -101,7 +101,7 @@
 					<a href="#" >작가프로필보기</a>
 				</li>
 				<li class="nav-item">
-					<a href="javascript:artistWorkDetail();">작품보기</a>
+					<a href="javascript:artistWorkDetail();" id="artistWorkDetail">작품보기</a>
 				</li>
 			</ul>
 			
@@ -617,6 +617,9 @@ function onload(sort, type){
 	}
 			
 	$(".grid").append(html).trigger("create");
+	if(result.length == 0){
+		$("#artistWorkDetail").css("display", "none");
+	}
 	masonryLayout();
 }
 
