판매 수수료 주석처리

--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -155,8 +155,8 @@
 						</div>
 						
 						<div class="med">
-							<h2 id="bidOrSale">경매 시작가</h2>
-							<div style="display:inline-block; margin-left:15px;">판매수수료 <img src="resources/img/ba/me-icon.png" class="med-me" /><div>
+							<h2 id="bidOrSale" style="display:inline-block;">경매 시작가</h2>
+							<!-- <div style="margin-left:15px;display:inline-block;">판매수수료 <img src="resources/img/ba/me-icon.png" class="med-me" /></div> -->
 							 
 							<div class="med-box radio-2">
 								<div id="bidOrSale2">
