--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -664,10 +664,42 @@
 										<input type="checkbox" id="cbx_bidAgree3"/>
 										<label for="cbx_bidAgree3"><span></span>
 											<div class="check-info">
-												<p>작품 판매에 대한 수수료가 부과됩니다.</p>
-												판매자 : 3%, 구매자 6% (부가세 제외) 
+												<p>
+													작품 판매에 대한 수수료가 부과됩니다.
+													<button id="btn_toggle"><img src="resources/img/ba/me-icon.png"></button>
+												</p>
 											</div>
 										</label>
+										
+										<!--0830_구매수수료-->
+										<div id="Toggle" style="display:none">
+											<div class="toggle_box1">
+												<div class="toggle_bar1">판매수수료</div>
+												<div class="toggle_close" id="toggle_close"><img src="resources/img/ba/icon-end_1.png"></div>
+											</div>
+											<div class="toggle_con1">
+												<table>
+													<thead>
+														<tr>
+															<td style="text-align: center;">결제 수단</td>
+															<td style="text-align: center;">구매 수수료</td>
+														</tr>
+													</thead>
+													<tbody>
+														<tr>
+															<td>가상계좌</td>
+															<td>10%</td>
+														</tr>
+														<tr>
+															<td>신용카드</td>
+															<td>11%</td>
+														</tr>
+													</tbody>
+												</table>
+												<p>※ 부가세 및 이벤트 할인 별도</p>
+											</div>
+										</div>
+										
 									</div>
 									<!-- <div class="collapsdiv">보기</div> -->
 							        </a>
@@ -690,7 +722,7 @@
 										<label for="cbx_bidAgree4"><span></span>
 											<div class="check-info">
 												<p>모든 미술품의 <b class="c-red ">운송</b>은 <b class="c-red ">직거래</b>가 불가능합니다.</p>
-												구매자는 회사가 제공하는 <b class="c-red ">배송서비스</b>를 필수로 사용해야 됩니다. 
+												구매자는 회사가 제공하는 <b class="c-red ">운송서비스를</b>를 필수로 사용해야 됩니다. 
 											</div>
 										</label>
 									</div>
@@ -704,7 +736,7 @@
 										■ 운송 유의사항<br/>
 											
 										-고객센터에서 운송서비스를 안내 받은 후 48시간 이내에 결제를 해야 됩니다.<br/>
-										-운송방법은 프리미엄 운송서비스와 직접운송 중 필수로 이용해야 되며 추가적으로 설치, 포장이 필요한 경우 선택이 가능합니다. <br/>
+										-운송방법은 프리미엄, 일반, 셀프 운송 중 필수로 이용해야 되며 추가적으로 설치, 포장이 필요한 경우 선택이 가능합니다.<br/>
 										-작품가/부가서비스 미결제, 운송일정조율에 대한 응답거부, 작품운송의 인계 및 수취거부, 미술품 또는 보증서의 허위, 변조, 조작, 딜링아트 서비스 이용약관에 위반되는 행위가 발생되는 경우 거래가 취소 될 수 있습니다. <br/>
 										-미술품의 소유권은 구매자에게 운송이 완료 되기 전까지 판매자에게 있습니다. <br/>
 										-해외운송은 불가하며 제주도, 도서산간 지역, 조형작품은 별도문의를 통해 안내해드립니다.
@@ -1593,7 +1625,18 @@ function askingPrice(prc){
 	return returnVal;
 }
 
+//0830 토글팝업
+$(function (){
+	$("#btn_toggle").click(function (){
+	$("#Toggle").toggle();
+	});
+});
 
+$(function (){
+	$('#toggle_close').click(function() {
+		 $('#Toggle').hide(); 
+	});
+});
 
  $(window).on("resize", function () {
     if(window.matchMedia('(min-width: 1537px)').matches)
