--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -152,11 +152,11 @@
 <!-- 모달검색 -->
 <!-- Modal -->
 <div class="modal fade modal-s" id="lp_mgz9Dtl" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style=" width: auto;">
-	<div class="modal-dialog modal-baeg_1 max-w1200 ">
-		<div class="modal-content_1">
-			<div class="modal-header_1 lp_mgz9DtlModalHearder" style="padding: 0;min-height: 0;">
-				<div class="baegs_1">
-				    <div class="close_1" onclick="closeMgz9Dtl()"><img src="resources/img/ba/icon-end_1.png" style="width:20px;"/></div>
+	<div class="modal-dialog modal-baeg max-w1200 ">
+		<div class="modal-content">
+			<div class="modal-header lp_mgz9DtlModalHearder" style="padding: 0;min-height: 0;">
+				<div class="baegs baegs_1">
+				    <div class="close close_1" onclick="closeMgz9Dtl()">닫기</div>
 				</div>
 			</div>
 			
