메인배너 수정

--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -6454,4 +6454,4 @@ p.dib{display:inline-block !important;}
 .box_con1 {height:750px; overflow:auto;}
 .max-img {max-width:75rem;}
 
-.hidden {display:none;}
+.hiddenMobile {display:none;}
