--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -440,7 +440,7 @@ $(function() {
 		*/
 		
 		$("#artstInfo").append(artstInfoHtml).trigger("create");
-		var artstInfoButton = '<button type="button" class="the-more2 mg_t60 hidden" id="openArtstInfoModal">더보기</button>';
+		var artstInfoButton = '<button type="button" class="the-more2 mg_t60 hiddenMobile" id="openArtstInfoModal">더보기</button>';
 		$("#artstInfo").append(artstInfoButton).trigger("create");
 		$("#artstInfoModal").append(artstInfoHtml2).trigger("create");
 		var moreButton = '<button type="button" class="btn-more"><span>more</span></button>';
