--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -103,8 +103,9 @@
 						<div class="swiper-wrapper">
 							
 							<!-- 이벤트 베너 2022-07-22 -->
-							<div class="swiper-slide" align="center" style="background-color:#31DBD2;">
-								<img src="resources/img/banner-11_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+							<div class="swiper-slide" align="center" style="background-color:#f0eddc;">
+								<!-- <img src="resources/img/banner-11_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/> -->
+								<img src="resources/img/banner-15_pc.jpg" class="myCollection" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide" align="center" style="background-color:#ececec;">
 								<img src="resources/img/banner-12_pc.jpg" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
@@ -126,7 +127,8 @@
 						<div class="swiper-wrapper">
 							<!-- 이벤트 베너 2022-07-22 -->
 							<div class="swiper-slide">
-								<img src="resources/img/banner-11_tablet.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+								<img src="resources/img/banner-15_pc.jpg" class="myCollection" style="cursor:pointer;"/>
+								<!-- <img src="resources/img/banner-11_tablet.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/> -->
 							</div>
 							<!--
 							<div class="swiper-slide">
@@ -155,7 +157,8 @@
 						<div class="swiper-wrapper">
 							<!-- 이벤트 베너 2022-07-22 -->
 							<div class="swiper-slide">
-								<img src="resources/img/banner-14_mobile.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+								<img src="resources/img/banner-15_mobile.jpg" class="myCollection" style="cursor:pointer;"/>
+								<!-- <img src="resources/img/banner-14_mobile.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/> -->
 							</div>
 							<!-- 
 							<div class="swiper-slide">
