--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -162,6 +162,9 @@
 													<label for="rd4">가상계좌</label>
 												</div>
 											</div>
+											<div class="bat-box3 mg_t30">
+												<span class="c-reds2">※ 9월의 혜택 : 판매 수수로 50% 할인(~9/31)</span>
+											</div>
 											<!-- <div class="bat-box3 mg_t30">
 												<span class="c-reds">※ 오픈 이벤트 (거래 수수료 할인)</span>
 												<br/><span class="c-reds">카드결제 : 거래수수료 2.5% 할인</span>
