--- a/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
@@ -98,7 +98,7 @@
 					</div>
 					<div class="about-body">
 						<div class="top-san1">
-							<div class="ts-mo"><img src="resources/img/about/mo-bg.jpg" /></div>
+							<div class="ts-mo"><img src="resources/img/about/mo-bg.jpg" class="max-img"/></div>
 							<div class="about-div max-1200">
 								<div class="about-st1">
 									<h3>국내 최초<br/>개인간 미술품 거래 플랫폼</h3>
